--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,65 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+.top-container .socials-fixed {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  background-color: #45124c;
+  padding: 5px;
+}
+.top-container .socials-fixed img {
+  margin: 7px;
+}
+.top-container .socials-fixed img:hover {
+  cursor: pointer;
+}
+.top-container .menu {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  right: 2vw;
+  top: 0;
+  font-family: "Dosis", sans-serif;
+  color: #2f1946;
+  font-weight: 700;
+}
+.top-container .menu:hover {
+  cursor: pointer;
+}
+.top-container .menu .strips {
+  justify-content: center;
+}
+.top-container .menu .strips .stip {
+  display: flex;
+  width: 30px;
+  height: 4px;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 60px;
+  background-color: #e22028;
+  align-items: space-between;
+}
+.top-container .menu .strips:before {
+  display: flex;
+  content: "";
+  width: 30px;
+  height: 4px;
+  margin-left: 10px;
+  border-radius: 30px;
+  background-color: #e22028;
+}
+.top-container .menu .strips:after {
+  display: flex;
+  content: "";
+  width: 30px;
+  height: 4px;
+  margin-left: 10px;
+  border-radius: 30px;
+  background-color: #e22028;
+}
 .top-container .background-top {
   width: 100%;
   height: 100vh;
