--- a/sass/components/_top-styles.scss
+++ b/sass/components/_top-styles.scss
@@ -1,181 +1,241 @@
 @import "_variables";
 
 .top-container {
-    width: 100%;
-    background: $white;
+  width: 100%;
+  background: $white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  .socials-fixed {
+    position: fixed;
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-  
-    .background-top {
-      width: 100%;
-      height: 100vh;
-      opacity: 0.7;
+    left: 0;
+    background-color: #45124c;
+    padding: 5px;
+    img {
+      margin: 7px;
+      &:hover {
+        cursor: pointer;
+      }
     }
-  
-    .logo {
-      top: 10%;
-      position: absolute;
-      display: block;
+  }
+
+  .menu {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    right: 2vw;
+    top: 0;
+    font-family: $dosis-font;
+    color: $font-color;
+    font-weight: 700;
+    &:hover{
+      cursor: pointer;
     }
-  
-    .middle-block {
-      flex-flow: column;
-      position: absolute;
+    .strips {
+      justify-content: center;
+      .stip {
+        display: flex;
+        width: 30px;
+        height: 4px;
+        margin-left: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        border-radius: 60px;
+        background-color: #e22028;
+        align-items: space-between;
+        
+      }
+      &:before {
+        display: flex;
+        content: "";
+        width: 30px;
+        height: 4px;
+        margin-left: 10px;
+        border-radius: 30px;
+        background-color: #e22028;
+      }
+      &:after {
+        display: flex;
+        content: "";
+        width: 30px;
+        height: 4px;
+        margin-left: 10px;
+        border-radius: 30px;
+        background-color: #e22028;
+      }
+    }
+  }
+  .background-top {
+    width: 100%;
+    height: 100vh;
+    opacity: 0.7;
+  }
+
+  .logo {
+    top: 10%;
+    position: absolute;
+    display: block;
+  }
+
+  .middle-block {
+    flex-flow: column;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+
+    .title {
+      color: $font-color;
+      font-family: $roboto-font;
+      font-weight: 700;
+      font-size: 50px;
+      margin-top: 50px;
+    }
+
+    .container-button {
       display: flex;
       justify-content: center;
-  
-      .title {
-        color: $font-color;
-        font-family: $roboto-font;
-        font-weight: 700;
-        font-size: 50px;
-        margin-top: 50px;
-      }
-  
-      .container-button {
-        display: flex;
-        justify-content: center;
-  
-        .round-line {
+
+      .round-line {
+        width: 180px;
+        height: 55px;
+        border: 2px solid #81398b;
+        border-radius: 40px;
+        padding: 10px;
+
+        .start-button {
+          border: none;
+          margin: 0 auto;
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          background-color: #81398b;
+          border-radius: 40px;
           width: 180px;
           height: 55px;
-          border: 2px solid #81398b;
-          border-radius: 40px;
-          padding: 10px;
-  
-          .start-button {
-            border: none;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            background-color: #81398b;
-            border-radius: 40px;
-            width: 180px;
-            height: 55px;
-            z-index: 90;
-            color: $white;
-            font-weight: 600;
-            font-family: $roboto-font;
-            font-size: 18px;
-            transition: transform 0.05s ease-in-out, background 0.1s ease-in-out;
-  
-            @include button-animation(#81398b);
-  
-            img {
-              display: block;
-              margin-right: 0px;
-            }
-  
-            p {
-              display: block;
-            }
-          }
-        }
-      }
-    }
-  
-    .top-bottom-block {
-      display: flex;
-      justify-content: space-between;
-      position: absolute;
-      top: 70vh;
-  
-      .world-card {
-        display: flex;
-        align-content: space-between;
-        justify-content: center;
-        width: 270px;
-        height: 370px;
-        background-color: #fe4a5d;
-        flex-wrap: wrap;
-        margin-right: 40px;
-  
-        img {
-          margin-top: 90px;
-        }
-  
-        .text-area {
-          display: flex;
-          bottom: 0;
-          font-weight: 600;
-          font-family: $dosis-font;
-          font-size: 30px;
+          z-index: 90;
           color: $white;
-          display: block;
-          height: 90px;
-          width: 100%;
-          background-color: #e44254;
-  
-          p {
-            margin-left: 25%;
-          }
-        }
-      }
-  
-      .hearts-card {
-        display: flex;
-        align-content: space-between;
-        justify-content: center;
-        width: 270px;
-        height: 370px;
-        background-color: #e22028;
-        flex-wrap: wrap;
-        margin-right: 40px;
-  
-        img {
-          margin-top: 90px;
-        }
-  
-        .text-area {
-          display: flex;
-          bottom: 0;
           font-weight: 600;
-          font-family: $dosis-font;
-          font-size: 30px;
-          color: $white;
-          display: block;
-          height: 90px;
-          width: 100%;
-          background-color: #d3191f;
-  
-          p {
-            margin-left: 25%;
+          font-family: $roboto-font;
+          font-size: 18px;
+          transition: transform 0.05s ease-in-out, background 0.1s ease-in-out;
+
+          @include button-animation(#81398b);
+
+          img {
+            display: block;
+            margin-right: 0px;
           }
-        }
-      }
-  
-      .wi-fi-card {
-        display: flex;
-        align-content: space-between;
-        justify-content: center;
-        width: 270px;
-        height: 370px;
-        background-color: #ff6c00;
-        flex-wrap: wrap;
-  
-        img {
-          margin-top: 90px;
-        }
-  
-        .text-area {
-          display: flex;
-          bottom: 0;
-          font-weight: 600;
-          font-family: $dosis-font;
-          font-size: 30px;
-          color: $white;
-          display: block;
-          height: 90px;
-          width: 100%;
-          background-color: #e56100;
-  
+
           p {
-            margin-left: 30%;
+            display: block;
           }
         }
       }
     }
   }
+
+  .top-bottom-block {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 70vh;
+
+    .world-card {
+      display: flex;
+      align-content: space-between;
+      justify-content: center;
+      width: 270px;
+      height: 370px;
+      background-color: #fe4a5d;
+      flex-wrap: wrap;
+      margin-right: 40px;
+
+      img {
+        margin-top: 90px;
+      }
+
+      .text-area {
+        display: flex;
+        bottom: 0;
+        font-weight: 600;
+        font-family: $dosis-font;
+        font-size: 30px;
+        color: $white;
+        display: block;
+        height: 90px;
+        width: 100%;
+        background-color: #e44254;
+
+        p {
+          margin-left: 25%;
+        }
+      }
+    }
+
+    .hearts-card {
+      display: flex;
+      align-content: space-between;
+      justify-content: center;
+      width: 270px;
+      height: 370px;
+      background-color: #e22028;
+      flex-wrap: wrap;
+      margin-right: 40px;
+
+      img {
+        margin-top: 90px;
+      }
+
+      .text-area {
+        display: flex;
+        bottom: 0;
+        font-weight: 600;
+        font-family: $dosis-font;
+        font-size: 30px;
+        color: $white;
+        display: block;
+        height: 90px;
+        width: 100%;
+        background-color: #d3191f;
+
+        p {
+          margin-left: 25%;
+        }
+      }
+    }
+
+    .wi-fi-card {
+      display: flex;
+      align-content: space-between;
+      justify-content: center;
+      width: 270px;
+      height: 370px;
+      background-color: #ff6c00;
+      flex-wrap: wrap;
+
+      img {
+        margin-top: 90px;
+      }
+
+      .text-area {
+        display: flex;
+        bottom: 0;
+        font-weight: 600;
+        font-family: $dosis-font;
+        font-size: 30px;
+        color: $white;
+        display: block;
+        height: 90px;
+        width: 100%;
+        background-color: #e56100;
+
+        p {
+          margin-left: 30%;
+        }
+      }
+    }
+  }
+}
